--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,15 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-image: url(../images/cover-image-dark.png);
+  --bg-color: #000028;
+  --accent-color: #FF0070;
+  --menu-list-color: #FF0070;
+  --transparent-accent: rgba(255, 0, 112, 0.4); 
+  --title-color: #DB00FF;
+  --cards-title-text: #FF0070;
+  --card-title-text: #000028;
+  --card-text: #F1B2CE;
+}
+
+.header__rec {
+  display: initial;
 }
