--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,21 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-image: url(../images/cover-image-light.png);
+  --bg-color: #FFF1F7;
+  --accent-color: #FF8DCB;
+  --menu-list-color: #353430;
+  --transparent-accent: rgba(53, 52, 48, 0.4);  
+  --title-color: #FFC2E6; 
+  --cards-title-text: #353430;
+  --card-title-text: #353430;
+  --card-text: #353430;
+}
+
+.theme-light .header__rec {
+  display: none;
+}
+
+@media (prefers-color-scheme: light) {
+  .theme-auto .header__rec {
+    display: none;
+  }
 }
