--- a/styles/light.css
+++ b/styles/light.css
@@ -15,6 +15,18 @@
 }
 
 @media (prefers-color-scheme: light) {
+  :root {
+    --bg-image: url(../images/cover-image-light.png);
+    --bg-color: #FFF1F7;
+    --accent-color: #FF8DCB;
+    --menu-list-color: #353430;
+    --transparent-accent: rgba(53, 52, 48, 0.4);
+    --title-color: #FFC2E6;
+    --cards-title-text: #353430;
+    --card-title-text: #353430;
+    --card-text: #353430;
+  }
+  
   .theme-auto .header__rec {
     display: none;
   }
